--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,15 +8,25 @@
   <p class="description">
     <%= product.description %>
   </p>
-  <footer class="actions">
+  <% if product.quantity == 0  %>
+    <aside class='sold_out'>
+      SOLD OUT
+    </aside>
+    <footer>
+     <%= link_to product, class: 'btn btn-default pull-right' do %>
+      Details &raquo;
+    <% end %>
+    </footer>
+    <% else %>
+      <footer class="actions">
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
     <% end %>
-    <%= link_to product, class: 'btn btn-default pull-right' do %>
+     <%= link_to product, class: 'btn btn-default pull-right' do %>
       Details &raquo;
     <% end %>
   </footer>
-
+  <% end %>
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
