--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<header class="page-header">
+<h1>Dashboard</h1>
+</header>
+
+<h4> You have <%= @total_products %> products listed on Jungle</h4>
+<br>
+<h4> You have <%= @total_categories %> categories listed on Jungle</h4>
+
+
+
