--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -11,6 +11,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
+      <li>
+        <%= link_to 'About', [:about, :index] %>
+        </li>
         <li>
           <%= link_to 'Home', :root %>
         </li>
@@ -25,6 +28,7 @@
             <% end %>
           </ul>
         </li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
